# mcp-android-server-python

./: .gitignore  LICENSE  pyproject.toml  readme.md  server.py  server_legacy.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.prompts/: _amazon.txt
tests/: test_server.py
tools/: __init__.py  advanced_tools.py  app_tools.py  device_tools.py  input_tools.py  inspection_tools.py  screen_tools.py
