[project]
name = "mcp-adb"
version = "0.1.0"
description = "An MCP server for Android automation using UIAutomator2"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp==2.13.0",
    "uiautodev>=0.13.4",
    "uiautomator2>=3.5.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Please use \\`import python_multipart\\` instead.:PendingDeprecationWarning:starlette\\.formparsers",
]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]
